--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 input {
     padding: 10px;
     width: 100%;
-    border: 2px solid #5f9341;
+    border: 1px solid #5f9341;
     margin-bottom: 10px;
     box-sizing: border-box;
 }
@@ -20,7 +20,7 @@ input {
 button {
     color: #fff;
     background: #5f9341;
-    border: none;
+    border: 1px solid #5f9341;
     padding: 8px 16px;
     font-weight: bold;
 }
@@ -37,4 +37,9 @@ li {
 
 li a {
     color: #5f9341;
+}
+
+#delete-btn {
+    color: #5f9341;
+    background: #fff;
 }
